# indicator-pipeline

./: .gitignore  Dockerfile  README.md  Snakefile  create_flag.bat  pyproject.toml
docs/: doc_indicator_pipeline.md  doc_indicator_pipeline_english_version.md
scripts/: run_pipeline.py  utils.py
sleeplab_converter/: edf.py  events_mapping.py  plot_subject.py
sleeplab_converter/mars_database/: README.md  annotation.py  convert.py
sleeplab_converter/mars_microsleep_mslt_mwt/: annotation.py  convert.py
src/indicator_pipeline/: db.py  excel_mapping.py  excel_to_json.py  logging_config.py  run_pipeline.py  send_json_to_api.py  sftp_client.py  slf_conversion.py  utils.py
src/sleeplab_converter/: edf.py
src/sleeplab_converter/mars_database/: LICENSE.txt  annotation.py  convert.py
tests/indicator_pipeline/: test_excel_to_json.py  test_utils.py
